// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders the about view 1`] = `
<Fragment>
  <Memo(Header) />
  <About />
  <Footer />
</Fragment>
`;

exports[`Renders the calendar view 1`] = `
<Fragment>
  <Memo(Header) />
  <Calendar />
  <Footer />
</Fragment>
`;

exports[`Renders the dashboard view 1`] = `
<Fragment>
  <Memo(Header) />
  <Dashboard />
  <Footer />
</Fragment>
`;

exports[`Renders the notfound view 1`] = `
<Fragment>
  <Memo(Header) />
  <NotFound />
  <Footer />
</Fragment>
`;
